grammar.js
    source_file: $ => seq(
      optional($.hashbang),
      optional($.preamble),
      repeat(choice(
        $.action_block,
        $.macro_definition,
      )),
    ),

    preamble: $ => repeat1($._preamble_item),
    _preamble_item: $ => choice(
      $.config_block,
      $.c_preproc,
      $.c_preproc_block,
      seq($.c_struct, optional(';')),
      $.import_statement,
      $.map_declaration,
    ),

    config_block: $ => seq(
      'config',
      '=',
      '{',
      optional($._config_body),
      '}',
    ),

    _config_body: $ => seq(
      seq($.config_assignment, repeat(seq(';', $.config_assignment))),
      optional(';'),
    ),

    config_assignment: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', choice(
        $.integer_literal,
        $.identifier,
        $.string_literal,
      )),
    ),

    macro_definition: $ => seq(
      'macro',
      field('name', $.identifier),
      field('parameters', $.macro_parameters),
      field('body', $.block),
    ),

    macro_parameters: $ => seq(
      '(',
      sepBy(',', choice($.identifier, $._variable)),
      ')',
    ),

    action_block: $ => seq($.probes_list, optional($.predicate), $.action),

    probes_list: $ => seq(
      sepBy1(',', $.probe),
      optional(','),
    ),

    probe: $ => choice(
      /* Built-in begin/end probes with no arguments */
      field('provider', $.begin_end_provider),

      /* Probes with diffrent arguments, i.e. fentry[:module]:function  */
      $._fentry_fexit,
      $._fentry_fexit_bpf,
      $._kprobe_kretprobe,
      $._uprobe_uretprobe,
      $._tracepoint,
      $._rawtracepoint,
      $._hardware_event,
      $._software_event,
      $._bench_test,
      $._profile_interval,
      $._iter,
      $._usdt,
      $._watchpoint,
    ),

    begin_end_provider: _ => choice(
      'BEGIN',
      'END',
      'begin',
      'end',
    ),

    _fentry_fexit: $ => seq(
      field('provider', $.fentry_fexit_provider),
      $._probe_arguments__optional_module_and_function,
    ),

    _fentry_fexit_bpf: $ => seq(
      field('provider', $.fentry_fexit_provider),
      ':',
      field('subprovider', $.bpf_identifier),
      optional(seq(
        ':',
        field('program_id', $.decimal_number),
      )),
      ':',
      field('program_name', $.wildcard_identifier),
    ),

    _kprobe_kretprobe: $ => seq(
      // TODO add: kprobe[:module]:fn+offset
      field('provider', $.kprobe_kretprobe_provider),
      $._probe_arguments__optional_module_and_function,
    ),

    _uprobe_uretprobe: $ => seq(
      field('provider', $.uprobe_uretprobe_provider),
      ':',
      field('binary', $.file_identifier),
      ':',
      field('function', $.identifier),
    ),

    _tracepoint: $ => seq(
      field('provider', $.tracepoint_provider),
      ':',
      field('subsys', $._wildcard_identifier),
      ':',
      field('event', $._wildcard_identifier),
    ),

    _rawtracepoint: $ => seq(
      field('provider', $.rawtracepoint_provider),
      $._probe_arguments__optional_module_and_function,
    ),

    _hardware_event: $ => seq(
      field('provider', $.hardware_event_provider),
      $._probe_arguments__event_and_optional_count,
    ),

    _software_event: $ => seq(
      field('provider', $.software_event_provider),
      $._probe_arguments__event_and_optional_count,
    ),

    _bench_test: $ => seq(
      field('provider', $.bench_test_provider),
      ':',
      field('function', $.identifier),
    ),

    _profile_interval: $ => seq(
      field('provider', $.profile_interval_provider),
      choice(
        $._profile_interval_time,
        $._profile_interval_hz,
      ),
    ),

    _iter: $ => seq(
      field('provider', $.iter_provider),
      ':',
      field('object', $.identifier),
      optional(seq(
        ':',
        field('pin', $.file_identifier),
      )),
    ),

    _usdt: $ => seq(
      field('provider', $.ustd_provider),
      ':',
      field('binary', $.file_identifier),
      optional(seq(
        ':',
        field('namespace', $.identifier),
      )),
      ':',
      field('function', $.identifier),
    ),

    _watchpoint: $ => seq(
      field('provider', $.watchpoint_provider),
      ':',
      choice(
        field('address', $.integer_literal),
        seq(
          field('function', $.identifier),
          '+',
          field('argn', $.argn_identifier),
        ),
      ),
      ':',
      field('length', $.integer_literal),
      ':',
      field('mode', $.watchpoint_mode),
    ),

    action: $ => seq(
      '{',
      optional($._action_body),
      '}',
    ),

    _action_body: $ => seq(
      repeat(choice(
        seq($._statement, ';'),
        $._loop_or_if_statement,
      )),
      choice(
        seq($._statement, optional(';')),
        $._loop_or_if_statement,
      ),
    ),

    /* Internal block */
    block: $ => seq(
      '{',
      optional($._block_body),
      '}',
    ),

    _block_body: $ => seq(
      repeat(choice(
        seq($._statement, ';'),
        seq($._flow_statement, ';'),
        $._loop_or_if_statement,
      )),
      choice(
        seq($._statement, optional(';')),
        seq($._flow_statement, optional(';')),
        $._loop_or_if_statement,
      ),
    ),

    if_statement: $ => seq(
      'if',
      optional('comptime'),
      choice(
        seq('(', field('condition', $._expression), ')'),
        $._variable,
        $.identifier,
        $.call_expression,
        $._integer_literal,
      ),
      field('consequence', $.block),
      optional(field('alternative', $.else_clause)),
    ),

    else_clause: $ => seq(
      'else',
      choice(
        $.if_statement,
        $.block,
      ),
    ),

    // Similar like Block, 'if (Cond) Block' can be both: expression and statement,
    // depending on if last line it the block ends with '; or not.
    while_statement: $ => seq(
      'while',
      '(',
      field('condition', $._expression),
      ')',
      field('body', $.block),
    ),

    unroll_statement: $ => seq(
      'unroll',
      '(',
      $._integer_literal,
      ')',
      field('body', $.block),
    ),

    for_statement: $ => seq(
      'for',
      choice(
        seq('(', $._for_statement_range, ')'),
        $._for_statement_range,
      ),
      field('body', $.block),
    ),

    _for_statement_range: $ => seq(
      $.scratch_variable,
      ':',
      choice($.map_variable, $.range),
    ),

    range: $ => choice(
      $._range,
      $._parenthesized_range,
    ),

    _range: $ => seq(
      field('left', $._expression),
      '..',
      field('right', $._expression),
    ),

    _parenthesized_range: $ => seq(
      '(',
      $._range,
      ')',
    ),

    _expression: $ => choice(
      $.binary_expression,
      alias($._div_expression, $.binary_expression),
      $.call_expression,
      $.cast_expression,
      $.comptime_expression,
      $.field_expression,
      $.subscript_expression,
      $.sizeof_expression,
      $.offsetof_expression,
      $.pointer_expression,
      $.conditional_expression,
      $.unary_expression,
      $.tuple_expression,
      $.parenthesized_expression,
      $.update_expression,
      $.string_literal,
      $.integer_literal,
      $.boolean_literal,
      $._variable,
      $.identifier,
      $.script_parameter,
      $._retval_builtin,
      alias($._block_expression, $.block_expression),
      $.if_expression,
      $.args_keyword,
    ),

    binary_expression: $ => {
      const table = [
        /* eslint-disable no-multi-spaces */
        ['%', PREC.multiplicative],
        // ['/',  PREC.multiplicative],
        ['*',  PREC.multiplicative],
        ['+',  PREC.additive],
        ['-',  PREC.additive],
        ['<<', PREC.shift],
        ['>>', PREC.shift],
        ['<=', PREC.relational],
        ['>=', PREC.relational],
        ['<',  PREC.relational],
        ['>',  PREC.relational],
        ['==', PREC.equal],
        ['!=', PREC.equal],
        ['&',  PREC.bitwise_and],
        ['^',  PREC.bitwise_xor],
        ['|',  PREC.bitwise_or],
        ['&&', PREC.logical_and],
        ['||', PREC.logical_or],
        /* eslint-enable no-multi-spaces */
      ];

      return choice( ...table.map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        )),
      ));
    },

    call_expression: $ => prec(PREC.call,
      seq(
        field('function', $.identifier),
        field('arguments', $.arguments),
      ),
    ),

    arguments: $ => seq(
      '(',
      sepBy(',', $._expression),
      ')',
    ),

    update_expression: $ => choice(
      $._sufix_increment,
      $._sufix_decrement,
      $._prefix_increment,
      $._prefix_decrement,
    ),

    /* Sufix increment/decrement has the same precedence as funnction call */
    _sufix_increment: $ => prec.left(PREC.call, seq($._variable, '++')),
    _sufix_decrement: $ => prec.left(PREC.call, seq($._variable, '--')),

    /* Prefix increment/decrement has the same precedence as cast */
    _prefix_increment: $ => prec.right(PREC.cast, seq('++', $._variable)),
    _prefix_decrement: $ => prec.right(PREC.cast, seq('--', $._variable)),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        alias(/[^"\\\n]+/, $.string_content),
        alias(/\\[^\n]/, $.escape_sequence),
      )),
      '"',
    ),

    _integer_literal: $ => choice(
      $.integer_literal,
      $.script_parameter,
    ),

    /* TODO: bpfrace report errors on things like 0xffLL */
    integer_literal: _ => token(seq(
      optional('-'),
      choice(
        /[0-9][0-9_]*/,
        /0[xX][0-9a-fA-F_]+/,
        /[0-9]+[eE][0-9]+/,
      ),
      choice(
        seq(
          optional(choice('u', 'U')),
          optional(choice('ll', 'l', 'L', 'LL')),
        ),
        seq(
          optional(choice('ns', 'us', 'ms', 's', 'm', 'h', 'd')),
        ),
      ),
    )),

    _variable: $ => choice(
      $.scratch_variable,
      $.map_variable,
    ),

    map_variable: $ => seq(
      token(seq(
        '@',
        optional(/[_a-zA-Z][_a-zA-Z0-9]*/),
      )),
      optional($.indexes_list),
    ),

    indexes_list: $ => seq(
      '[',
      sepBy1(',', $._expression),
      ']',
    ),

    scratch_variable: _ => /[$][_a-zA-Z][_a-zA-Z0-9]*/,
    identifier: _ => /[_a-zA-Z][_a-zA-Z0-9]*/,
