test/corpus/literals.txt
============================================
String literals
============================================
BEGIN { "1"; "\n"; "\""; "dot't be stupid";  }
---
(source_file
  (action_block
    (probes_list
      (probe))
    (action
      (expression_statement
        (string_literal
          (string_content)))
      (expression_statement
        (string_literal
          (escape_sequence)))
      (expression_statement
        (string_literal
          (escape_sequence)))
      (expression_statement
        (string_literal
          (string_content))))))

============================================
Simple numeric literals
============================================
BEGIN { 1; 0777; 0xffff0000; 1e3; }
---
(source_file
  (action_block
    (probes_list
      (probe))
    (action
      (expression_statement
        (integer_literal))
      (expression_statement
        (integer_literal))
      (expression_statement
        (integer_literal))
      (expression_statement
        (integer_literal)))))

============================================
Numeric literals with size specifiers
============================================
BEGIN { 1ULL; 0l; 10L; 2ul; 1e4ll }
---
(source_file
  (action_block
    (probes_list
      (probe))
    (action
      (expression_statement
        (integer_literal))
      (expression_statement
        (integer_literal))
      (expression_statement
        (integer_literal))
      (expression_statement
        (integer_literal))
      (expression_statement
        (integer_literal)))))
